# src/main/resources/openapi.yaml
@@ -12,6 +12,7 @@ paths:
     get:
       summary: Returns health monitor information
       description: A health monitor
+      operationId: getMonitor
       responses:
         '200':
           description: A health monitor
@@ -24,6 +25,7 @@ paths:
     get:
       summary: Returns a new Quizz Session
       description: each Quizz Session has a beginning and an end
+      operationId: getSession
       responses:
         '200':
           description: A JSON Array of a session object
@@ -32,7 +34,8 @@ paths:
               schema:
                 $ref: '#/components/schemas/QuizzSession'
     delete:
-      summary: finishs a session
+      summary: finishs a QuizzSession and deletes all related data
+      operationId: deleteSession
       parameters:
         - name: sessionId
           in: path
